--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,14 @@ markupsafe==3.0.2
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.4
+pandas==2.2.3
+python-dateutil==2.9.0.post0
+pytz==2025.2
 scikit-learn==1.6.1
 scipy==1.15.2
+six==1.17.0
 sympy==1.13.1
 threadpoolctl==3.6.0
 torch==2.6.0
 typing-extensions==4.13.1
+tzdata==2025.2
