--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,20 @@
+contourpy==1.3.2
+cycler==0.12.1
 filelock==3.18.0
+fonttools==4.57.0
 fsspec==2025.3.2
 jinja2==3.1.6
 joblib==1.4.2
+kiwisolver==1.4.8
 markupsafe==3.0.2
+matplotlib==3.10.1
 mpmath==1.3.0
 networkx==3.4.2
 numpy==2.2.4
+packaging==25.0
 pandas==2.2.3
+pillow==11.2.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
 pytz==2025.2
 scikit-learn==1.6.1
