--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+--extra-index-url https://download.pytorch.org/whl/cu121
 contourpy==1.3.2
 cycler==0.12.1
 filelock==3.18.0
@@ -22,6 +23,6 @@ scipy==1.15.2
 six==1.17.0
 sympy==1.13.1
 threadpoolctl==3.6.0
-torch==2.6.0
+torch==2.5.1
 typing-extensions==4.13.1
 tzdata==2025.2
